# lily-blog

./: .env  .gitignore  Cargo.toml  README.md  justfile
admin-srv/: Cargo.toml
admin-srv/src/: dbaccess.rs  main.rs  server.rs
admin-srv/tests/: admin_tests.rs
blog-api/: Cargo.toml
blog-api/src/: main.rs  model.rs  router.rs
blog-api/src/handler/: comment.rs  mod.rs  post.rs  tag.rs
blog-frontend/: components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
blog-frontend/src/: App.vue  entity.ts  main.ts  store.ts
blog-frontend/src/components/: Menu.vue
blog-frontend/src/pages/: Home.vue
comment-srv/: Cargo.toml
comment-srv/src/: dbaccess.rs  main.rs  server.rs
comment-srv/tests/: comment_tests.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entity/: admin.rs  comment.rs  mod.rs  post.rs  prelude.rs  tag.rs
entity/src/model/: mod.rs
post-srv/: Cargo.toml
post-srv/src/: dbaccess.rs  main.rs  server.rs
post-srv/tests/: post_tests.rs
proto/: Cargo.toml  build.rs
proto/proto/: admin.proto  comment.proto  post.proto  tag.proto
proto/src/: admin.rs  comment.rs  lib.rs  post.rs  tag.rs
sql/: postgres_localhost-2024_08_08_13_13_30-dump.sql  postgres_localhost-2024_08_10_16_28_27-dump.sql  postgres_localhost-2024_08_11_15_56_21-dump.sql  postgres_localhost-2024_08_16_17_22_57-dump.sql
tag-srv/: Cargo.toml
tag-srv/src/: dbaccess.rs  main.rs  server.rs
tag-srv/tests/: tag_tests.rs
util/: Cargo.toml
util/src/: lib.rs  password.rs
