[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7.5"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
tower-http = { version = "0.5.2", features = ["trace"] }
serde_json = "1.0"

proto = { path = "../proto" }
entity = { path = "../entity" }
util = { path = "../util" }