[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
markdown = "1.0.0-alpha.19"
prost-types = "0.13"
